syntax = "proto3";

import "common/ComponentRequest.proto";
import "booksheetinfo/BookSheetInfoResponse.proto";

option java_package="cn.migu.selection.proto.booksheetervice";
option java_outer_classname="_BookSheetService";
option java_generic_services=true;

service BookSheetService {
	rpc getBookSheetInfo (ComponentRequest) returns (BookSheetInfoResponse);
}